@@ -233,7 +233,7 @@ public class ServiceConfiguration extends UpgradeableDataHashMap implements Seri
 	public void upgrade() {
 		if (Float.compare(LATEST_VERSION, getVersion()) > 0) {
             // New version of the class, upgrade
-			String msg = intres.getLocalizedMessage("services.upgrade", new Float(getVersion()));
+			String msg = intres.getLocalizedMessage("services.upgrade", Float.valueOf(getVersion()));
             log.info(msg);
 
             log.debug(LATEST_VERSION);
@@ -315,7 +315,7 @@ public class ServiceConfiguration extends UpgradeableDataHashMap implements Seri
                 setRunOnAllNodes(false);
             }
 
-			data.put(VERSION, new Float(LATEST_VERSION));
+			data.put(VERSION, Float.valueOf(LATEST_VERSION));
 		}		
 	}
 	
